--- a/force-app/main/default/lwc/memoryGameLwc/memoryGameLwc.css
+++ b/force-app/main/default/lwc/memoryGameLwc/memoryGameLwc.css
@@ -32,7 +32,7 @@
     height: 3.7rem;
     width: 3.7rem;
     margin: 0.2rem;
-    background: #f03d5f;
+    background: #fca510;
     font-size: 0px;
     color: #ffffff;
     border-radius: 5px;
@@ -42,3 +42,92 @@
     align-items: center;
     box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);
 }
+.card.open{
+    transform: rotateY(0);
+    background-color: #02b3e4;
+    cursor: default;
+    animation-name: flipInY;
+    -webkit-backface-visibility: visible !important;
+    backface-visibility: visible !important;
+    animation-duration: .75s;
+}
+.card.show{
+    font-size: 33px;
+    visibility: visible !important;
+    opacity: 100 !important;
+}
+/* once a card is open and showed, be unable to click it */
+.card.disabled{
+    pointer-events: none;
+    opacity: 0.9;
+}
+
+
+/*animations*/
+@keyframes flipInY {
+	from {
+		transform: perspective(400px) rotate3d(0, 1, 0, 90deg);
+		animation-timing-function: ease-in;
+		opacity: 0;
+	}
+
+	40% {
+		transform: perspective(400px) rotate3d(0, 1, 0, -20deg);
+		animation-timing-function: ease-in;
+	}
+
+	60% {
+		transform: perspective(400px) rotate3d(0, 1, 0, 10deg);
+		opacity: 1;
+	}
+
+	80% {
+		transform: perspective(400px) rotate3d(0, 1, 0, -5deg);
+	}
+
+	to {
+		transform: perspective(400px);
+	}
+}
+/* @keyframes rubberBand {
+	from {
+		transform: scale3d(1, 1, 1);
+	}
+
+	30% {
+		transform: scale3d(1.25, 0.75, 1);
+	}
+
+	40% {
+		transform: scale3d(0.75, 1.25, 1);
+	}
+
+	50% {
+		transform: scale3d(1.15, 0.85, 1);
+	}
+
+	65% {
+		transform: scale3d(.95, 1.05, 1);
+	}
+
+	75% {
+		transform: scale3d(1.05, .95, 1);
+	}
+
+	to {
+		transform: scale3d(1, 1, 1);
+	}
+}
+@keyframes pulse {
+	from {
+		transform: scale3d(1, 1, 1);
+	}
+
+	50% {
+		transform: scale3d(1.2, 1.2, 1.2);
+	}
+
+	to {
+		transform: scale3d(1, 1, 1);
+	}
+} */
