Creating custom page tempate with aura, and creating 3 LWC components to place in them

--- a/force-app/main/default/aura/pageTemplate_2_7_3/pageTemplate_2_7_3.cmp
+++ b/force-app/main/default/aura/pageTemplate_2_7_3/pageTemplate_2_7_3.cmp
@@ -12,9 +12,9 @@
                 {!v.left}
             </lightning:layoutItem>
             <lightning:layoutItem aura:id="centerColumn" size="7" class="center">
-                !v.center
+                {!v.center}
             </lightning:layoutItem>
-            <lightning:layoutItem aura:id="rightColumn" size="3">!v.right</lightning:layoutItem>
+            <lightning:layoutItem aura:id="rightColumn" size="3">{!v.right}</lightning:layoutItem>
         </lightning:layout>
 
     </div>
