styling the tile list component

--- a/force-app/main/default/lwc/carTile/carTile.css
+++ b/force-app/main/default/lwc/carTile/carTile.css
@@ -7,3 +7,8 @@ img.carImage{
     font-weight: bold;
     text-transform: uppercase;
 }
+.content{
+    padding: 8px;
+    background-color: #ffffff;
+    border-radius: 0.25rem;
+}
